--- a/Seance04/introduction_poo.ipynb
+++ b/Seance04/introduction_poo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "personalized-adelaide",
+   "id": "nonprofit-dividend",
    "metadata": {},
    "source": [
     "# Introduction à la programmation orientée objet"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formal-murray",
+   "id": "graduate-diamond",
    "metadata": {},
    "source": [
     "Constat numérique en python."
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "graduate-necessity",
+   "id": "imported-mortgage",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "protecting-agreement",
+   "id": "injured-giant",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dirty-savannah",
+   "id": "tribal-reflection",
    "metadata": {},
    "source": [
     "**REMARQUE** les flottants sont toujours arrondis, et sont stockés de manière binaire."
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "honest-award",
+   "id": "valuable-entrepreneur",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "speaking-steam",
+   "id": "democratic-superintendent",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "armed-moment",
+   "id": "victorian-therapist",
    "metadata": {},
    "source": [
     "**VOIR LE COURS PYTHON POUR PLUS DE DETAILS**"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "likely-boards",
+   "id": "grave-convert",
    "metadata": {},
    "source": [
     "On peut ressentir le besoin de travailler de manière exacte avec au moins les nombres rationnels.\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ultimate-thriller",
+   "id": "union-valuation",
    "metadata": {},
    "source": [
     "## Création d'un objet"
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "applied-poultry",
+   "id": "interracial-newman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "urban-matrix",
+   "id": "monthly-mention",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "changing-recipe",
+   "id": "structured-jacksonville",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "experimental-fairy",
+   "id": "olympic-faculty",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "western-forwarding",
+   "id": "alpha-lying",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "successful-reconstruction",
+   "id": "younger-difference",
    "metadata": {},
    "source": [
     "## Affichage moins barbare\n",
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "right-colombia",
+   "id": "coastal-arkansas",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "executive-heritage",
+   "id": "exposed-viking",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "miniature-glucose",
+   "id": "gorgeous-conservation",
    "metadata": {},
    "source": [
     "Pour utiliser des fonctionnalités natives de python avec des objets \"surmesures\" on utilise des *dunder* méthodes (on parle aussi de métaprotocoles).\n",
@@ -366,13 +366,13 @@
     "\n",
     "Les méthodes sont des fonctions internes à un objet.\n",
     "\n",
-    "Quand on fait `repr(f)`, python remplace ceci par `f.__repr__()`"
+    "Quand on fait `repr(f)`, python remplace ceci par `f.__repr__()`, qui est remplacé par `Fraction.__repr__(f)`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "executive-engine",
+   "id": "surrounded-facing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "eight-sauce",
+   "id": "judicial-chance",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "large-cheat",
+   "id": "absolute-afternoon",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "racial-orbit",
+   "id": "typical-trout",
    "metadata": {},
    "source": [
     "## Arithmétique"
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "expected-portsmouth",
+   "id": "other-frost",
    "metadata": {},
    "outputs": [
     {
@@ -460,16 +460,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "front-trigger",
+   "id": "experienced-library",
    "metadata": {},
    "source": [
     "**REMARQUE** l'opérateur `+` est une fonctionnalité native de python. On a une dunder méthode correspondante: `__add__`."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "inner-daisy",
+   "metadata": {},
+   "source": [
+    "**REMARQUE** si on fait `f1 + f2`, python remplace par `f1.__add__(f2)` qui est lui même remplacé par `Fraction.__add__(f1, f2)`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "sonic-pennsylvania",
+   "id": "excited-dominant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "rental-covering",
+   "id": "proprietary-flexibility",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "dangerous-founder",
+   "id": "younger-victoria",
    "metadata": {},
    "outputs": [
     {
@@ -539,19 +547,190 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supported-blink",
+   "id": "dying-october",
    "metadata": {},
    "source": [
     "**REMARQUE** on pourrait consulter la [documentation](https://docs.python.org/3/reference/datamodel.html#special-method-names) pour l'ensemble des dunders méthodes."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "suspected-excuse",
+   "metadata": {},
+   "source": [
+    "## On peut aussi avoir des méthodes conventionnelle"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "electrical-threshold",
+   "execution_count": 35,
+   "id": "honest-fancy",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "class Fraction:\n",
+    "    def __init__(self, numerateur: int, denominateur: int):\n",
+    "        self.numerateur = numerateur\n",
+    "        self.denominateur = denominateur\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return f\"Fraction(numerateur={self.numerateur}, denominateur={self.denominateur})\"\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f\"{self.numerateur}/{self.denominateur}\"\n",
+    "    \n",
+    "    def __add__(self, autre):\n",
+    "        num = self.numerateur * autre.denominateur + autre.numerateur * self.denominateur\n",
+    "        den = self.denominateur * autre.denominateur\n",
+    "        return Fraction(num, den)\n",
+    "    \n",
+    "    def __mul__(self, autre):\n",
+    "        num = self.numerateur * autre.numerateur\n",
+    "        den = self.denominateur * autre.denominateur\n",
+    "        return Fraction(num, den)\n",
+    "    \n",
+    "    def est_reduite(self):\n",
+    "        return math.gcd(self.numerateur, self.denominateur) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "norwegian-corporation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Fraction(1, 2).est_reduite()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "continent-balance",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Fraction(2, 4).est_reduite()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "planned-tribute",
+   "metadata": {},
+   "source": [
+    "## Egalité"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "mineral-headset",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Fraction(1, 2) == Fraction(2, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "changed-tuesday",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Fraction:\n",
+    "    def __init__(self, numerateur: int, denominateur: int):\n",
+    "        self.numerateur = numerateur\n",
+    "        self.denominateur = denominateur\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return f\"Fraction(numerateur={self.numerateur}, denominateur={self.denominateur})\"\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f\"{self.numerateur}/{self.denominateur}\"\n",
+    "    \n",
+    "    def __add__(self, autre):\n",
+    "        num = self.numerateur * autre.denominateur + autre.numerateur * self.denominateur\n",
+    "        den = self.denominateur * autre.denominateur\n",
+    "        return Fraction(num, den)\n",
+    "    \n",
+    "    def __mul__(self, autre):\n",
+    "        num = self.numerateur * autre.numerateur\n",
+    "        den = self.denominateur * autre.denominateur\n",
+    "        return Fraction(num, den)\n",
+    "    \n",
+    "    def __eq__(self, autre):\n",
+    "        return self.numerateur * autre.denominateur == autre.numerateur * self.denominateur\n",
+    "    \n",
+    "    def est_reduite(self):\n",
+    "        return math.gcd(self.numerateur, self.denominateur) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "human-retailer",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Fraction(1, 2) == Fraction(2, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "explicit-algorithm",
+   "metadata": {},
+   "source": [
+    "# Exercice\n",
+    "\n",
+    "Implémenter le reste des opérations: soustraction, division, inégalités..."
+   ]
   }
  ],
  "metadata": {
