--- a/Seance04/exploration.ipynb
+++ b/Seance04/exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "occupied-debut",
+   "id": "smaller-valuable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "continent-fraction",
+   "id": "alleged-knitting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "liable-thickness",
+   "id": "constitutional-debut",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "mathematical-motion",
+   "id": "rolled-hopkins",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "adaptive-grove",
+   "id": "dress-thanks",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "loving-tissue",
+   "id": "continuous-series",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "square-craft",
+   "id": "split-paintball",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "sweet-package",
+   "id": "complicated-capitol",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "strong-import",
+   "id": "human-voltage",
    "metadata": {},
    "source": [
     "**REMARQUE** dans les deux fonctions `deja_visites` n'est utilisé que pour tester l'appartenance.\n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "random-patent",
+   "id": "weird-captain",
    "metadata": {},
    "source": [
     "# Ordre de visite"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "framed-receptor",
+   "id": "australian-dealer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "suited-working",
+   "id": "distributed-tongue",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governing-island",
+   "id": "ambient-lotus",
    "metadata": {},
    "source": [
     "![ordre](./depth_first_breadth_first.gif)"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "silver-database",
+   "id": "opposed-former",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "artificial-license",
+   "id": "delayed-recruitment",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "listed-antarctica",
+   "id": "sized-legend",
    "metadata": {},
    "outputs": [
     {
@@ -318,13 +318,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surprised-season",
+   "id": "black-faith",
    "metadata": {},
    "source": [
     "# Exercice\n",
     "\n",
-    "Adapté"
+    "1. Adapter `trouve_chemin` suivant le même principe.\n",
+    "2. Nettoyer la séance.\n",
+    "3. Utiliser ce module pour résoudre le problème de traversée de rivière."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "technical-cincinnati",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
