MAJ notebook itérateurs

--- a/Seance05/iterateurs.ipynb
+++ b/Seance05/iterateurs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "previous-alabama",
+   "id": "protecting-monkey",
    "metadata": {},
    "source": [
     "# Boucles"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "wired-digit",
+   "id": "usual-conversion",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-broadcast",
+   "id": "distinct-indication",
    "metadata": {},
    "source": [
     "## Structure conditionnelle: `while`"
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "asian-combat",
+   "id": "geographic-angle",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fatal-press",
+   "id": "undefined-conversation",
    "metadata": {},
    "source": [
     "## Structure `for`"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "breathing-pressing",
+   "id": "narrow-mills",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "consistent-timeline",
+   "id": "gothic-layout",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "missing-bottom",
+   "id": "utility-superior",
    "metadata": {},
    "source": [
     "## Remarques"
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confused-advance",
+   "id": "duplicate-consciousness",
    "metadata": {},
    "source": [
     "1. Les élémént de la liste sont récupérés successivement. On n'a pas vraiment besoin d'un conteneur car on n'utilise jamais les éléments simultanément.\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "unexpected-stations",
+   "id": "irish-logistics",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "another-error",
+   "id": "capable-baltimore",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "previous-blond",
+   "id": "representative-personality",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "actual-review",
+   "id": "blind-crystal",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "decreased-holiday",
+   "id": "noble-cuisine",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "native-anatomy",
+   "id": "worthy-count",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "organized-amazon",
+   "id": "final-electricity",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developing-actor",
+   "id": "opposed-detector",
    "metadata": {},
    "source": [
     "**REMARQUE** la cellule précédente est typiquement ce qu'effectue la boucle `for`."
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "talented-tradition",
+   "id": "appreciated-hypothetical",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "immediate-scope",
+   "id": "welsh-purchase",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "smooth-frame",
+   "id": "convertible-outdoors",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "threatened-boston",
+   "id": "rapid-ministry",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "revolutionary-helena",
+   "id": "negative-internship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demographic-handle",
+   "id": "intended-nurse",
    "metadata": {},
    "source": [
     "**ATTENTION** un générateur ne peut être itérer qu'une fois, après il est *épuisé*.\n",
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "specialized-highlight",
+   "id": "manufactured-seven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "wanted-violence",
+   "id": "automotive-controversy",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hungarian-smooth",
+   "id": "educational-accuracy",
    "metadata": {},
    "source": [
     "**REMARQUE** pour obtenir des valeurs successives, on remplace le mot clef `return` par `yield`."
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "mathematical-agenda",
+   "id": "greek-economics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "drawn-graham",
+   "id": "upper-graham",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "initial-neighborhood",
+   "id": "fleet-booking",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "packed-lindsay",
+   "id": "awful-sellers",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "legislative-custody",
+   "id": "complex-young",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "dried-smile",
+   "id": "motivated-communication",
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "constitutional-europe",
+   "id": "average-damage",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "directed-minutes",
+   "id": "recovered-barcelona",
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pediatric-seattle",
+   "id": "macro-indian",
    "metadata": {},
    "source": [
     "**ATTENTION** \n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ahead-gilbert",
+   "id": "regional-behalf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "demographic-airfare",
+   "id": "cross-battlefield",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "characteristic-slovak",
+   "id": "infinite-greenhouse",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "suitable-stereo",
+   "id": "extensive-criticism",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "scheduled-writer",
+   "id": "changing-healthcare",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "cardiac-cylinder",
+   "id": "herbal-encyclopedia",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "severe-september",
+   "id": "demographic-direction",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "frequent-gauge",
+   "id": "operating-squad",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "forced-perth",
+   "id": "polar-finnish",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "formed-skating",
+   "id": "human-interview",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "white-innocent",
+   "id": "korean-awareness",
    "metadata": {},
    "source": [
     "**ATTENTION** on ne pourrait pas avoir d'équivalent via les listes ici car on n'a une infinité de nombres produits."
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "indoor-victoria",
+   "id": "vocal-person",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "sapphire-nature",
+   "id": "obvious-equivalent",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "involved-forum",
+   "id": "assisted-midwest",
    "metadata": {},
    "source": [
     "**REMARQUE** on peut récupérer la liste de tous les éléments produits par un générateur via la conversion par `list`."
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solar-mathematics",
+   "id": "correct-press",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -868,11 +868,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "light-missouri",
+   "execution_count": 51,
+   "id": "literary-south",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def genere_entiers():\n",
+    "    nombre = 1\n",
+    "    while True:\n",
+    "        yield nombre\n",
+    "        nombre = nombre + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "hundred-accuracy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_genere_entiers():\n",
+    "    iterateur = iter(genere_entiers())\n",
+    "    assert next(iterateur) == 1\n",
+    "    assert next(iterateur) == 2\n",
+    "    assert next(iterateur) == 3\n",
+    "    assert next(iterateur) == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "approved-discovery",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_genere_entiers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "diverse-brief",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def est_premier(nbr: int) -> bool:\n",
+    "    \"\"\"Teste la primalité de l'argument.\"\"\"\n",
+    "    if nbr == 1:\n",
+    "        return False\n",
+    "    for d in range(2, nbr):\n",
+    "        if nbr % d == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "    \n",
+    "assert not est_premier(1)\n",
+    "assert est_premier(2)\n",
+    "assert est_premier(3)\n",
+    "assert not est_premier(4)\n",
+    "assert est_premier(5)\n",
+    "assert not est_premier(6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "peaceful-hindu",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genere_premiers():\n",
+    "    for nbr in genere_entiers():\n",
+    "        if est_premier(nbr):\n",
+    "            yield nbr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "northern-friendship",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_genere_premiers():\n",
+    "    iterateur = iter(genere_premiers())\n",
+    "    assert next(iterateur) == 2\n",
+    "    assert next(iterateur) == 3\n",
+    "    assert next(iterateur) == 5\n",
+    "    assert next(iterateur) == 7   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "lyric-payroll",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_genere_premiers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "roman-nowhere",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genere_premiers_bis():\n",
+    "    return (nbr for nbr in genere_entiers() if est_premier(nbr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "verbal-values",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_genere_premiers_bis():\n",
+    "    iterateur = iter(genere_premiers_bis())\n",
+    "    assert next(iterateur) == 2\n",
+    "    assert next(iterateur) == 3\n",
+    "    assert next(iterateur) == 5\n",
+    "    assert next(iterateur) == 7   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "trained-maker",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_genere_premiers_bis()"
+   ]
   }
  ],
  "metadata": {
