--- a/Seance06/sudoku.ipynb
+++ b/Seance06/sudoku.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "stone-medicaid",
+   "id": "headed-rally",
    "metadata": {},
    "source": [
     "# Objectif\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-wireless",
+   "id": "numerical-fabric",
    "metadata": {},
    "source": [
     "Exemple d'une grille complète:\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "apart-imperial",
+   "id": "norman-quick",
    "metadata": {},
    "source": [
     "## Sommets\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hazardous-portugal",
+   "id": "medium-track",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "million-switch",
+   "id": "collectible-threshold",
    "metadata": {},
    "source": [
     "Il y a clairement trops de sommets pour expérer construire le graphe entier en mémoire."
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "through-justice",
+   "id": "liable-scoop",
    "metadata": {},
    "source": [
     "## Arretes\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "practical-reservoir",
+   "id": "black-incentive",
    "metadata": {},
    "source": [
     "Le graphe qui nous intéresse part donc d'une grille incomplète et contient tous les sommets reliés à cette grille par un chemin.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fifty-edinburgh",
+   "id": "endless-ethnic",
    "metadata": {},
    "source": [
     "Si on part d'une grille avec $n$ cases vides on a alors\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elementary-potter",
+   "id": "southeast-september",
    "metadata": {},
    "source": [
     "De plus on observe que le graphe est sans boucle (visuellement on voit qu'on ne peut que descendre dans le graphe) on dit qu'il s'agit d'un arbre."
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharing-editor",
+   "id": "mediterranean-adrian",
    "metadata": {},
    "source": [
     "Les grilles complètes correspondant au remplissage de l'arbre corrspondent aux sommets qui sont dans la couche la plus basse de l'arbre.\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frequent-howard",
+   "id": "dying-equivalent",
    "metadata": {},
    "source": [
     "**REMARQUE** les solutions correspondant à une grille incomplète sont la réunion des solutions correspondant à ses voisins."
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signal-possession",
+   "id": "every-stylus",
    "metadata": {},
    "source": [
     "**REMARQUE** dés qu'une grille incomplète enfreint la règle on est sûr que toutes les grilles qui lui sont connectés vont l'enfreindre aussi! On peut donc arrêter le parcours pour cette partie du graphe."
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dressed-aerospace",
+   "id": "exempt-cinema",
    "metadata": {},
    "source": [
     "## Vérification des règles"
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southwest-lemon",
+   "id": "passing-tracker",
    "metadata": {},
    "source": [
     "Indice pour chaque dans la liste\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "pursuant-township",
+   "id": "northern-underwear",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "difficult-deposit",
+   "id": "basic-resistance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,13 +198,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identified-assignment",
+   "id": "according-cause",
    "metadata": {},
    "source": [
     "### Exercice\n",
     "\n",
-    "Coder `verifie_colonnes`."
+    "Coder `verifie_colonnes`. 10min -> 11h10."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "distributed-chapel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def verifie_colonnes(grille: Grille) -> bool:\n",
+    "    \"\"\"Chaque valeur doit être au plus présente une fois par colonne.\"\"\"\n",
+    "    for valeur in (1, 2, 3, 4):\n",
+    "        for num_colonne in range(4):\n",
+    "            if sum(\n",
+    "                1 \n",
+    "                for multiple in range(4) \n",
+    "                if grille[num_colonne + 4 * multiple] == valeur\n",
+    "            ) >= 2:\n",
+    "                return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "minute-afternoon",
+   "metadata": {},
+   "source": [
+    "### Exercice\n",
+    "\n",
+    "- Codez des tests pour les deux fonctions précédentes (10min -> 11h25)\n",
+    "- Codez la fonction `verifie_carres`.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dedicated-croatia",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
